--- a/drum-machine/src/App.css
+++ b/drum-machine/src/App.css
@@ -2,16 +2,10 @@
   text-align: center;
 }
 
-h1 {
-  padding: 0;
-  border-style: solid;
-  position: absolute;
-  top: 0;
-}
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 25vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,3 +18,22 @@ h1 {
   color: #61dafb;
 }
 
+h1 {
+  padding: 0;
+  border-style: solid;
+  position: absolute;
+  top: 0;
+}
+
+#drum-machine {
+  height: 75vh;
+  background-color: #282c34;
+  
+}
+
+#display {
+  width: 60vw;
+  height: 40vh;
+  margin: auto;
+  border: 3px solid palevioletred;
+}
