--- a/drum-machine/src/App.css
+++ b/drum-machine/src/App.css
@@ -2,6 +2,9 @@
   text-align: center;
 }
 
+button {
+  flex-basis: 30%;
+}
 
 .App-header {
   background-color: #282c34;
@@ -37,4 +40,15 @@ h1 {
   margin: auto;
   border: 3px solid palevioletred;
   display: flex;
+}
+
+#drums {
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+#control {
+  width: 50%;
 }
