--- a/drum-machine/src/App.css
+++ b/drum-machine/src/App.css
@@ -4,6 +4,10 @@
 
 button {
   flex-basis: 30%;
+  font-size: 2em;
+  color: blueviolet;
+  background-color: lightslategray;
+  border: solid 3px black;
 }
 
 .App-header {
@@ -23,7 +27,6 @@ button {
 
 h1 {
   padding: 0;
-  border-style: solid;
   position: absolute;
   top: 0;
 }
@@ -43,6 +46,7 @@ h1 {
 }
 
 #drums {
+  padding: 15px;
   width: 50%;
   display: flex;
   flex-direction: row;
